kubernetes/queue/rabbitmq-deployment.yaml
apiVersion: extensions/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: rabbitmq
    version: v1
  name: rabbitmq
  namespace: raptorslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
        version: v1
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/api/metrics"
        prometheus.io/port: "15672"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: rabbitmq:1.0.0
          name: rabbitmq
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
          ports:
            - name: epmd # don't touch this config
              containerPort: 4369 # don't touch this config
            - name: http-app
              containerPort: 15672
            - name: tcp-queue1
              containerPort: 5671
            - name: tcp-queue2
              containerPort: 5672
          readinessProbe:
            httpGet:
              path: /
              port: http-app
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 10
