kubernetes/queue/rabbitmq-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: raptorslog
spec:
  rules:
    - host: raptorslog.rabbitmq.local
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: 15672
